[tool.poetry]
name = "ingatools"
version = "0.2.0"
description = "Quick information gathering tools"
authors = ["mattia allegro <mattia.allegro@yahoo.it>"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "InGaTools" }]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12.3"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
dnspython = "2.0.0"
idna = "3.10"
ipwhois = "1.2.0"
python-dotenv = "1.0.1"
requests = "2.32.3"
soupsieve = "2.6"
urllib3 = "2.2.3"
black = "24.10.0"
flake8 = "7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160

[tool.isort]
profile = "black"
line_length = 160
